tests/error/type_match/base_case_array_to_slice_const_propagation1.bz
// error: unable to match expression of type 'const [32: int32]' to non-const array slice type '[: int32]'
function test()
{
	const arr = [32: int32]();
	let _: [: int32] = arr;
}
